--- a/project/WebContent/registerUser.xhtml
+++ b/project/WebContent/registerUser.xhtml
@@ -130,8 +130,8 @@
     			</p:column>
     			
     			<p:column headerText="">
-    			<p:commandButton value="comment" actionListener="#{commentBean.takeHotelId(pastreservationss.hotelid,pastreservationss.hotelname)}" action="makecomment.xhtml">
-</p:commandButton>
+    			<h:commandButton value="comment" type="submit" actionListener="#{commentBean.takeHotelId(pastreservationss.hotelid,pastreservationss.hotelname)}" action="makecomment.xhtml">
+</h:commandButton>
     		</p:column>	
 				</p:dataTable>
             </h:panelGrid>
