--- a/project/WebContent/VisitorPage1.xhtml
+++ b/project/WebContent/VisitorPage1.xhtml
@@ -55,7 +55,7 @@
 			<h:commandButton value="Search"
 				style="border:1px solid black;float:right;margin-right:5%;font-size:28px;"
 				type="submit" actionListener="#{VisitorPageBean.search}"
-				action="VisitorPage.xhtml" />
+				action="VisitorPage1.xhtml" />
 
 		</h:form>
 	</h:body>
