--- a/project/WebContent/makeReservation.xhtml
+++ b/project/WebContent/makeReservation.xhtml
@@ -21,7 +21,7 @@
 		<h3 style="margin-bottom: 0px; font-size: 32px;">Welcome to
 			tatiloradaburada.com</h3>
 		<div style="margin-left: 82%;">
-			<h:commandLink id="ho-name-id" action="VisitorPage.xhtml">
+			<h:commandLink id="ho-name-id" action="registerUser.xhtml">
 				<h:outputText value="#{VisitorPageBean.userna}"></h:outputText>
 			</h:commandLink>
 			<h:commandButton value="LOGOUT" style="margin-left:3%; height: 25px"
