--- a/project/WebContent/login.xhtml
+++ b/project/WebContent/login.xhtml
@@ -40,7 +40,7 @@
 
 		<div style="margin-top: 3%">
 			<div style="float: left">
-				<h:outputText value="Username: " style="font-size: 24pt"></h:outputText>
+				<h:outputText value="E-mail " style="font-size: 24pt"></h:outputText>
 			</div>
 			<div style="float: right">
 				<p:inputText id="username" value="#{LoginBean.username}" required="true" />
