--- a/project/WebContent/RegistrationHO.xhtml
+++ b/project/WebContent/RegistrationHO.xhtml
@@ -18,7 +18,7 @@
 					style="width: 100px; height: 100px;"></h:graphicImage>
 			</h:commandLink>
 		</div>
-				<h3 style="margin-bottom: 0px; font-size: 32px;">Welcome to tatiloradaburada.com</h3>
+				<h3 style="margin-bottom: 0px; font-size: 32px;">Hotel Owner Registration</h3>
 <div style="margin-left: 82%; ">
 			<h:commandButton value="Register" style="margin-left:3%; height: 25px"
 				type="submit" action="registar.xhtml" />
@@ -123,8 +123,8 @@
 	</div>
 
 	<br />
-	<h:commandButton value="SAVE"
-		style="float: right; height: 25px; margin-top: 2%; margin-right: 8%"
+	<h:commandButton value="Register"
+		style="float: left; height: 25px; margin-top: 2%; margin-left: 47%"
 		type="submit" actionListener="#{RegistrationBean.insertHO()}"
 		action="login.xhtml" />
 
