--- a/project/WebContent/login.xhtml
+++ b/project/WebContent/login.xhtml
@@ -60,7 +60,7 @@
 
 	<br />
 	<h:commandButton value="LOGIN"
-		style="float: right; height: 25px; margin-top: 2%; margin-right: 8%"
+		style="float: left; height: 25px; margin-top: 2%; margin-left: 47%"
 		type="submit" actionListener="#{LoginBean.setValues()}"
 		action="#{LoginBean.userPage()}" />
 
