--- a/project/WebContent/RegistrationR.xhtml
+++ b/project/WebContent/RegistrationR.xhtml
@@ -15,11 +15,11 @@
 		style="margin-top: 2%; border: 1px solid black; height: 120px; width: 100%; background-color: #8FBC8F">
 		<div style="float: left; margin-top: 0.8%; margin-left: 1%">
 			<h:commandLink id="ho-logo-id" action="VisitorPage1.xhtml">
-				<h:graphicImage url="\resources\images\logo.png"
+				<h:graphicImage url="/resources\images\logo.png"
 					style="width: 100px; height: 100px;"></h:graphicImage>
 			</h:commandLink>
 		</div>
-				<h3 style="margin-bottom: 0px; font-size: 32px;">Welcome to tatiloradaburada.com</h3>
+				<h3 style="margin-bottom: 0px; font-size: 32px;">User Registration</h3>
 <div style="margin-left: 82%; ">
 			<h:commandButton value="Register"
 				style="margin-left:3%; height: 25px" type="submit"
@@ -129,7 +129,7 @@
 
 	<br />
 	<h:commandButton value="Register"
-		style="float: right; height: 25px; margin-top: 2%; margin-right: 8%"
+		style="float: left; height: 25px; margin-top: 2%; margin-left: 47%"
 		type="submit" actionListener="#{RegistrationBean.insertR()}"
 		action="login.xhtml" />
 
