--- a/project/WebContent/hotelinfo1.xhtml
+++ b/project/WebContent/hotelinfo1.xhtml
@@ -11,7 +11,7 @@
     	<h:form id="header"
 		style="margin-top: 2%; border: 1px solid black; height: 120px; width: 100%; background-color: #8FBC8F">
 		<div style="float: left; margin-top: 0.8%; margin-left: 1%">
-			<h:commandLink id="ho-logo-id" action="VisitorPage1.xhtml">
+			<h:commandLink id="ho-logo-id" action="VisitorPage.xhtml">
 				<h:graphicImage url="/resources\images\logo.png"
 					style="width: 100px; height: 100px;"></h:graphicImage>
 			</h:commandLink>
