--- a/project/WebContent/login.xhtml
+++ b/project/WebContent/login.xhtml
@@ -7,7 +7,7 @@
 	xmlns:p="http://primefaces.org/ui">
 <h:head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<title>Edit my info</title>
+	<title>Login</title>
 </h:head>
 <h:body>
 	<h:form id="header"
@@ -59,10 +59,11 @@
 	</div>
 
 	<br />
-	<h:commandButton value="LOGIN"
-		style="float: left; height: 25px; margin-top: 2%; margin-left: 47%"
-		type="submit" actionListener="#{LoginBean.setValues()}"
-		action="#{LoginBean.userPage()}" />
+	<p:growl id="message" showDetail="true" />
+    <h:commandButton value="LOGIN"
+        style="float: left; height: 25px; margin-top: 2%; margin-left: 47%"
+        type="submit" actionListener="#{LoginBean.setValues()}"
+        action="#{LoginBean.userPage()}" update="message" />
 
 </h:form>
 
